--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,7 +1,48 @@
 body {
+    font-size: 14px;
+    line-height: 1.42857;
+
+
     padding-top: 40px;
     padding-bottom: 40px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-weight: 400;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
+
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: 40px;
+    padding: 9px 12px;
+    font-size: 16px;
+    line-height: 1.42857143;
+    color: #000 !important;
+    background: #f9f9f9 !important;
+    background-image: none;
+    border: 1px solid #dfe0e1;
+    border-radius: 2px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+
+
+
+.login-box, .register-box {
+    width: 360px;
+    margin: 7% auto;
+}.login-page, .register-page {
+    background: #d2d6de;
+}
+
+
+
 .modal-header {
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
@@ -23,6 +64,49 @@ body {
 p.link a {
     font-size: 11px;
 }
+
+.login-box-msg, .register-box-msg {
+    margin: 0;
+    text-align: center;
+    padding: 0 20px 20px 20px;
+}
+
+
+
+.login-box-body, .register-box-body {
+    background: #fff;
+    padding: 20px;
+    border-top: 0;
+    color: #666;
+}
+
+
+
+.has-feedback {
+    position: relative;
+}
+
+
+
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+
+
+.has-feedback .form-control {
+    padding-right: 42.5px;
+}
+
+
+
+
+.login-box-body .form-control-feedback, .register-box-body .form-control-feedback {
+    color: #777;
+}
+
+
 .form-signin .inner {
     padding: 20px;
     border-bottom-right-radius: 3px;
@@ -49,21 +133,32 @@ p.link a {
     color: white;
 }
 
-.form-control {
+
+.form-control-feedback {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
     display: block;
-    width: 100%;
-    height: 40px;
-    padding: 9px 12px;
-    font-size: 16px;
-    line-height: 1.42857143;
-    color: #000 !important;
-    background: #f9f9f9 !important;
-    background-image: none;
-    border: 1px solid #dfe0e1;
-    border-radius: 2px;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    width: 34px;
+    height: 34px;
+    line-height: 34px;
+    text-align: center;
+    pointer-events: none;
+}.checkbox, .radio {
+    position: relative;
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}.icheck>label {
+    padding-left: 0;
 }
+.checkbox label, .radio label {
+    min-height: 20px;
+    padding-left: 20px;
+    margin-bottom: 0;
+    font-weight: 400;
+    cursor: pointer;
+}
+
 /*# sourceMappingURL=login.css.map */
